--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-native-firebase/app": "^14.2.4",
     "@react-native-firebase/auth": "^14.2.4",
+    "@react-native-firebase/database": "^14.2.4",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.67.1",
+    "react-native-dropdown-picker": "^5.3.0",
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
