--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^14.2.4",
     "@react-native-firebase/auth": "^14.2.4",
     "@react-native-firebase/database": "^14.2.4",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
