--- a/ios/foody_app/Info.plist
+++ b/ios/foody_app/Info.plist
@@ -39,6 +39,8 @@
 	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need this permission to access photo library to select a photo</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
