bill pdf generator fully implemented,discount calculations and fixed validation issues,update product functionality, user role respondence

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,8 @@ target 'foody_app' do
   )
 
 
+  pod 'react-native-html-to-pdf', :path => '../node_modules/react-native-html-to-pdf'
+
   target 'foody_appTests' do
     inherit! :complete
     # Pods for testing
