--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-dropdown-picker": "^5.3.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^4.7.3",
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-vector-icons": "^9.0.0"
   },
+  
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
