--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "react": "17.0.2",
     "react-native": "0.67.1",
+    "react-native-date-picker": "^4.1.3",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^4.7.3",
@@ -28,7 +29,6 @@
     "react-native-screens": "^3.10.2",
     "react-native-vector-icons": "^9.0.0"
   },
-  
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
