--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "foody_app",
   "version": "0.0.1",
   "private": true,
+  "author": { "name": "Nishain De Silva" },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -17,14 +18,13 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "bcryptjs": "^2.4.3",
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-date-picker": "^4.1.3",
     "react-native-dropdown-picker": "^5.3.0",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^4.7.3",
-    "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-vector-icons": "^9.0.0"
