--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "foody_app",
   "version": "0.0.1",
   "private": true,
-  "author": { "name": "Nishain De Silva" },
+  "author": {
+    "name": "Nishain De Silva"
+  },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -15,6 +17,7 @@
     "@react-native-firebase/app": "^14.2.4",
     "@react-native-firebase/auth": "^14.2.4",
     "@react-native-firebase/database": "^14.2.4",
+    "@react-native-firebase/storage": "^14.5.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
